welcome.lessons.welcome.bat.bool1.In1020.scala.error
in1020:5: error: value =< is not a member of Int
	if((a>9 && a=<21) || (b>9 && b<21))
                    ^